# redwineplayers

./: .env  Cargo.toml  README.md  index.html  package-lock.json  package.json
js/: data.js
src/: main.rs  maindb.rs  mainmatch.rs  models.rs  schema.rs
src/models/: jugadores.rs  ligas.rs
templates/: create_post.html  index.html  tera_test.html
templates/blog/: posts.html
templates/red-wine/: index.html  package.json
templates/red-wine/src/: App.jsx
