[package]
name = "redwineplayers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.104", features = ["derive"]} 
serde_json = "1.0"
json = "0.12"
tera = "1.10.0"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.28"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "redwineplayers"
path = "src/main.rs"